--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,7 @@
     </head>
     <body>
         <h1><span class="badge badge-secondary">Mobile Legends! My Top 3 Support Characters!</span></h1>
-        <p>Skill's and Ultimatessss</p>
+        <p>Skill's and Ultimatessssssssssssssssssssss</p>
         <div id="container">
         <table id="MLtable">
             <tr>
