Updated Skills images

--- a/index1.html
+++ b/index1.html
@@ -18,15 +18,16 @@
                 text-align: center;
             }
 
-
             th {
                 background-color: lightgray;
             }
         </style>
     </head>
     <body>
-        <h1><span class="badge badge-secondary">Mobile Legends! My Top 3 Support Characters!</span></h1>
-        <p>Skill's and Ultimate</p>        
+      <div class="jumbotron mlbanner">
+          <h1><span class="badge badge-secondary">Mobile Legends! My Top 3 Support Characters!</span></h1>
+      </div>
+        <p>Skill's and Ultimate</p>
         <div id="container">
         <table id="MLtable">
             <tr>
@@ -39,35 +40,35 @@
             </tr>
             <tr>
                 <td id="firstskill">Scripture Of The Moon Elf(Passive Skill)</td>
-                <td><img id="ml" src="ScriptureoftheMoonElf.jpg" height=40% width="40%"></td>
+                <td id="firstskillimage"><img id="ml" src="ScriptureoftheMoonElf.jpg"></td>
                 <td id="firstskill">Smart Heart (Passive Skill)</td>
-                <td><img id="ml" src="SmartHeart.jpg" height=40% width="40%"></td>
+                <td id="firstskillimage"><img id="ml" src="SmartHeart.jpg"></td>
                 <td id="firstskill">Noumenon Energy Core(Passive Skill)</td>
-                <td><img id="ml" src="NoumenonEnergyCore.jpg" height=40% width="40%"></td>
+                <td id="firstskillimage"><img id="ml" src="NoumenonEnergyCore.jpg"></td>
             </tr>
             <tr>
                 <td id="secondskill">Moonlight Immersion</td>
-                <td id="secondskillimage"><img id="ml" src="MoonlightImmersion.jpg" height=40% width="40%"></td>
+                <td id="secondskillimage"><img id="ml" src="MoonlightImmersion.jpg"></td>
                 <td id="secondskill">Love Waves</td>
-                <td id="secondskillimage"><img id="ml" src="LoveWaves.jpg" height=40% width="40%"></td>
+                <td id="secondskillimage"><img id="ml" src="LoveWaves.jpg"></td>
                 <td id="secondskill">Charge!</td>
-                <td id="secondskillimage"><img id="ml" src="Charge.jpg" height=40% width="40%"></td>
+                <td id="secondskillimage"><img id="ml" src="Charge.jpg"></td>
             </tr>
             <tr>
                 <td id="thirdskill">Domain Of Moon Goddess</td>
-                <td id="thirdskillimage"><img id="ml" src="DomainofMoonGoddess.jpg" height=40% width="40%"></td>
+                <td id="thirdskillimage"><img id="ml" src="DomainofMoonGoddess.jpg"></td>
                 <td id="thirdskill">Puppet-on-a-String</td>
-                <td id="thirdskillimage"><img id="ml" src="PuppetonaString.jpg" height=40% width="40%"></td>
+                <td id="thirdskillimage"><img id="ml" src="PuppetonaString.jpg"></td>
                 <td id="thirdskill">Guardian's Bulwark</td>
-                <td id="thirdskillimage"><img id="ml" src="GuardiansBulwark.jpg" height=40% width="40%"></td>
+                <td id="thirdskillimage"><img id="ml" src="GuardiansBulwark.jpg"></td>
             </tr>
             <tr>
                 <td id="ultimate">Blessing Of Moon Goddess</td>
-                <td id="ultimateimage"><img id="ml" src="BlessingofMoonGoddess.jpg" height=70% width="40%"></td>
+                <td id="ultimateimage"><img id="ml" src="BlessingofMoonGoddess1.jpg"></td>
                 <td id="ultimate">Heartguard</td>
-                <td id="ultimateimage"><img id="ml" src="Heartguard.jpg" height=40% width="40%"></td>
+                <td id="ultimateimage"><img id="ml" src="Heartguard.jpg"></td>
                 <td id="ultimate">Noumenon Blast</td>
-                <td id="ultimateimage"><img id="ml" src="NoumenonBlast.jpg" height=40% width="40%"></td>
+                <td id="ultimateimage"><img id="ml" src="NoumenonBlast.jpg"></td>
             </tr>
         </table>
       </div>
