Update class skills and skillsimage

--- a/index1.html
+++ b/index1.html
@@ -6,18 +6,11 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="index1.css">
         <style>
-            #MLtable {
-                border: 2px solid black;
-                border-collapse: collapse;
-                width: 100%;
-            }
-
-            th, #firstskill, #secondskill, #thirdskill, #ultimate {
+            th, .skills {
                 border: 1px solid black;
                 padding: 5px;
                 text-align: center;
             }
-
             th {
                 background-color: lightgray;
             }
@@ -25,6 +18,7 @@
     </head>
     <body>
       <div class="jumbotron mlbanner">
+
           <h1><span class="badge badge-secondary">Mobile Legends! My Top 3 Support Characters!</span></h1>
       </div>
         <p>Skill's and Ultimate</p>
@@ -39,36 +33,36 @@
                 <th>------</th>
             </tr>
             <tr>
-                <td id="firstskill">Scripture Of The Moon Elf(Passive Skill)</td>
-                <td id="firstskillimage"><img id="ml" src="ScriptureoftheMoonElf.jpg"></td>
-                <td id="firstskill">Smart Heart (Passive Skill)</td>
-                <td id="firstskillimage"><img id="ml" src="SmartHeart.jpg"></td>
-                <td id="firstskill">Noumenon Energy Core(Passive Skill)</td>
-                <td id="firstskillimage"><img id="ml" src="NoumenonEnergyCore.jpg"></td>
+                <td class="skills">Scripture Of The Moon Elf(Passive Skill)</td>
+                <td class="skillsimage"><img id="ml" src="ScriptureoftheMoonElf.jpg"></td>
+                <td class="skills">Smart Heart (Passive Skill)</td>
+                <td class="skillsimage"><img id="ml" src="SmartHeart.jpg"></td>
+                <td class="skills">Noumenon Energy Core(Passive Skill)</td>
+                <td class="skillsimage"><img id="ml" src="NoumenonEnergyCore.jpg"></td>
             </tr>
             <tr>
-                <td id="secondskill">Moonlight Immersion</td>
-                <td id="secondskillimage"><img id="ml" src="MoonlightImmersion.jpg"></td>
-                <td id="secondskill">Love Waves</td>
-                <td id="secondskillimage"><img id="ml" src="LoveWaves.jpg"></td>
-                <td id="secondskill">Charge!</td>
-                <td id="secondskillimage"><img id="ml" src="Charge.jpg"></td>
+                <td class="skills">Moonlight Immersion</td>
+                <td class="skillsimage"><img id="ml" src="MoonlightImmersion.jpg"></td>
+                <td class="skills">Love Waves</td>
+                <td class="skillsimage"><img id="ml" src="LoveWaves.jpg"></td>
+                <td class="skills">Charge!</td>
+                <td class="skillsimage"><img id="ml" src="Charge.jpg"></td>
             </tr>
             <tr>
-                <td id="thirdskill">Domain Of Moon Goddess</td>
-                <td id="thirdskillimage"><img id="ml" src="DomainofMoonGoddess.jpg"></td>
-                <td id="thirdskill">Puppet-on-a-String</td>
-                <td id="thirdskillimage"><img id="ml" src="PuppetonaString.jpg"></td>
-                <td id="thirdskill">Guardian's Bulwark</td>
-                <td id="thirdskillimage"><img id="ml" src="GuardiansBulwark.jpg"></td>
+                <td class="skills">Domain Of Moon Goddess</td>
+                <td class="skillsimage"><img id="ml" src="DomainofMoonGoddess.jpg"></td>
+                <td class="skills">Puppet-on-a-String</td>
+                <td class="skillsimage"><img id="ml" src="PuppetonaString.jpg"></td>
+                <td class="skills">Guardian's Bulwark</td>
+                <td class="skillsimage"><img id="ml" src="GuardiansBulwark.jpg"></td>
             </tr>
             <tr>
-                <td id="ultimate">Blessing Of Moon Goddess</td>
-                <td id="ultimateimage"><img id="ml" src="BlessingofMoonGoddess1.jpg"></td>
-                <td id="ultimate">Heartguard</td>
-                <td id="ultimateimage"><img id="ml" src="Heartguard.jpg"></td>
-                <td id="ultimate">Noumenon Blast</td>
-                <td id="ultimateimage"><img id="ml" src="NoumenonBlast.jpg"></td>
+                <td class="skills">Blessing Of Moon Goddess</td>
+                <td class="skillsimage"><img id="ml" src="BlessingofMoonGoddess1.jpg"></td>
+                <td class="skills">Heartguard</td>
+                <td class="skillsimage"><img id="ml" src="Heartguard.jpg"></td>
+                <td class="skills">Noumenon Blast</td>
+                <td class="skillsimage""><img id="ml" src="NoumenonBlast.jpg"></td>
             </tr>
         </table>
       </div>
@@ -76,9 +70,9 @@
     <table>
         <tbody>
           <tr>
-            <td><img id="ml" src="estes.jpg" height=50% width="100%"></td>
-            <td><img id="ml" src="angela.jpg"height=50% width="100%"></td>
-            <td><img id="ml" src="lolita.jpg"height=40% width="80%"></td>
+            <td><img id="ml" src="estes.jpg" height="50%" width="100%"></td>
+            <td><img id="ml" src="angela.jpg" height="50%" width="100%"></td>
+            <td><img id="ml" src="lolita.jpg" height="40%" width="80%"></td>
           </tr>
           <tr class="mlbutton">
             <td><a href="estes.html"><button type="button" class="btn btn-primary">Estes</button></a></td>
