--- a/sample.html
+++ b/sample.html
@@ -94,11 +94,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
 </head>
 <body>
 
-<h2>Image Modal(CLICK THE IMAGE)</h2>
+<h2>Image Modal</h2>
 <p>In this example, we use CSS to create a modal (dialog box) that is hidden by default.</p>
 <p>We use JavaScript to trigger the modal and to display the current image inside the modal when it is clicked on. Also note that we use the value from the image's "alt" attribute as an image caption text inside the modal.</p>
 
-<img id="myImg" src="lolita.jpg" alt="lolita" style="width:100%;max-width:300px">
+<img id="myImg" src="estes.jpg" alt="estes" style="width:100%;max-width:300px">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
