Changes the buttons function

--- a/index1.html
+++ b/index1.html
@@ -62,7 +62,7 @@
                 <td class="skills">Heartguard</td>
                 <td class="skillsimage"><img id="ml" src="Heartguard.jpg"></td>
                 <td class="skills">Noumenon Blast</td>
-                <td class="skillsimage""><img id="ml" src="NoumenonBlast.jpg"></td>
+                <td class="skillsimage"><img id="ml" src="NoumenonBlast.jpg"></td>
             </tr>
         </table>
       </div>
@@ -75,9 +75,9 @@
             <td><img id="ml" src="lolita.jpg" height="40%" width="80%"></td>
           </tr>
           <tr class="mlbutton">
-            <td><a href="estes.html"><button type="button" class="btn btn-primary">Estes</button></a></td>
-            <td><a href="angela.html"><button type="button" class="btn btn-danger">Angela</button></a></td>
-            <td><a href="lolita.html"><button type="button" class="btn btn-warning">Lolita</button></a></td>
+            <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Estes</button></a></td>
+            <td><a onclick="window.open('angela.html')"><button type="button" class="btn btn-danger">Angela</button></a></td>
+            <td><a onclick="window.open('lolita.html')"><button type="button" class="btn btn-warning">Lolita</button></a></td>
           </tr>
         </tbody>
     </table>
