coding the hover text content

--- a/index1.html
+++ b/index1.html
@@ -34,11 +34,19 @@
             </tr>
             <tr>
                 <td class="skills">Scripture Of The Moon Elf(Passive Skill)</td>
-                <td class="skillsimage"><img id="ml" src="ScriptureoftheMoonElf.jpg"></td>
+                <div id="container2">
+                  <td><img id="ml" src="ScriptureoftheMoonElf.jpg" class="image"></td>
+                  <div class="overlay">Code of Moon Elves will charge energy into Estes slowly. When it
+                    stack up to 100, it will improve his next Basic Attack, dealing 250 (+100%Total Physical Attack)
+                    (+150%Total Magic Power) points of Magic Damage to the target while slowing it down. The damage
+                    will ricochet, dealing 125 (+50%Total Physical Attack)(+75%Total Magic Power) points of Magic
+                    Damage to nearby enemies and slowing them by 60%. Lasts 1.5s.
+                  </div>
+                </div>
                 <td class="skills">Smart Heart (Passive Skill)</td>
-                <td class="skillsimage"><img id="ml" src="SmartHeart.jpg"></td>
+                <td class="skillsimage"><img id="ml" src="SmartHeart.jpg" class="image"></td>
                 <td class="skills">Noumenon Energy Core(Passive Skill)</td>
-                <td class="skillsimage"><img id="ml" src="NoumenonEnergyCore.jpg"></td>
+                <td class="skillsimage"><img id="ml" src="NoumenonEnergyCore.jpg" class="image"></td>
             </tr>
             <tr>
                 <td class="skills">Moonlight Immersion</td>
