added div in mlimages

--- a/index1.html
+++ b/index1.html
@@ -75,12 +75,14 @@
         </table>
       </div>
     <div class="container1">
+    <div id="mlimages">
     <table>
         <tbody>
           <tr>
             <td><img id="ml" src="estes.jpg" height="50%" width="100%"></td>
             <td><img id="ml" src="angela.jpg" height="50%" width="100%"></td>
             <td><img id="ml" src="lolita.jpg" height="40%" width="80%"></td>
+    </div>
           </tr>
           <tr class="mlbutton">
             <td><a onclick="window.open('estes.html')"><button type="button" class="btn btn-primary">Estes</button></a></td>
