--- a/index1.html
+++ b/index1.html
@@ -76,7 +76,7 @@
       </div>
     <div class="container1">
     <div id="mlimages">
-    <table>
+    <table class="imagesbuttons">
         <tbody>
           <tr>
             <td><img id="ml" src="estes.jpg" height="50%" width="100%"></td>
@@ -92,5 +92,32 @@
         </tbody>
     </table>
   </div>
+  <div id="mlvideos">
+  <table>
+    <tbody>
+      <tr>
+          <td>
+            <h5>Estes Hero Introduction!</h5>
+            <video width="320" controls>
+              <source src="estesvideo.mp4" type="video/mp4">
+            </video>
+          </td>
+          <td>
+            <h5>Angela Hero Introduction!</h5>
+            <video width="320" controls>
+              <source src="angelavideo.mp4" type="video/mp4">
+            </video>
+          </td>
+          <td>
+            <h5>Lolita Hero Introduction!</h5>
+            <video width="320" controls>
+              <source src="lolitavideo.mp4" type="video/mp4">
+            </video>
+          </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+    <footer>Copyright © 2020 GM B0OM. All rights reserved.| Terms of Use | Privacy Policy</br>0926-7770-093</footer>
     </body>
 </html>
