--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,6 @@
     </head>
     <body>
       <div class="jumbotron mlbanner">
-
           <h1><span class="badge badge-secondary">Mobile Legends! My Top 3 Support Characters!</span></h1>
       </div>
         <p>Skill's and Ultimate</p>
@@ -79,9 +78,9 @@
     <table class="imagesbuttons">
         <tbody>
           <tr>
-            <td><img id="ml" src="estes.jpg" height="50%" width="100%"></td>
-            <td><img id="ml" src="angela.jpg" height="50%" width="100%"></td>
-            <td><img id="ml" src="lolita.jpg" height="40%" width="80%"></td>
+            <td><img id="ml" src="estes1.jpg" height="700" width="350"></td>
+            <td><img id="ml" src="angela1.jpg" height="500" width="350"></td>
+            <td><img id="ml" src="lolita1.jpg" height="500" width="350"></td>
     </div>
           </tr>
           <tr class="mlbutton">
@@ -97,19 +96,19 @@
     <tbody>
       <tr>
           <td>
-            <h5>Estes Hero Introduction!</h5>
+            <h6>Estes Hero Introduction!</h6>
             <video width="320" controls>
               <source src="estesvideo.mp4" type="video/mp4">
             </video>
           </td>
           <td>
-            <h5>Angela Hero Introduction!</h5>
+            <h6>Angela Hero Introduction!</h6>
             <video width="320" controls>
               <source src="angelavideo.mp4" type="video/mp4">
             </video>
           </td>
           <td>
-            <h5>Lolita Hero Introduction!</h5>
+            <h6>Lolita Hero Introduction!</h6>
             <video width="320" controls>
               <source src="lolitavideo.mp4" type="video/mp4">
             </video>
