updated blessingofmoongoddess image

--- a/index1.html
+++ b/index1.html
@@ -65,7 +65,7 @@
             </tr>
             <tr>
                 <td class="skills">Blessing Of Moon Goddess</td>
-                <td class="skillsimage"><img id="ml" src="BlessingofMoonGoddess1.jpg"></td>
+                <td class="skillsimage"><img id="ml" src="BlessingofMoonGoddess2.png"></td>
                 <td class="skills">Heartguard</td>
                 <td class="skillsimage"><img id="ml" src="Heartguard.jpg"></td>
                 <td class="skills">Noumenon Blast</td>
