changed file name blessingofmoongoddess

--- a/index1.html
+++ b/index1.html
@@ -34,7 +34,7 @@
             <tr>
                 <td class="skills">Scripture Of The Moon Elf(Passive Skill)</td>
                 <div id="container2">
-                  <td><img id="ml" src="ScriptureoftheMoonElf.jpg" class="image"></td>
+                  <td><img id="ml1" src="ScriptureoftheMoonElf.jpg" class="image"></td>
                   <div class="overlay">Code of Moon Elves will charge energy into Estes slowly. When it
                     stack up to 100, it will improve his next Basic Attack, dealing 250 (+100%Total Physical Attack)
                     (+150%Total Magic Power) points of Magic Damage to the target while slowing it down. The damage
@@ -43,33 +43,33 @@
                   </div>
                 </div>
                 <td class="skills">Smart Heart (Passive Skill)</td>
-                <td class="skillsimage"><img id="ml" src="SmartHeart.jpg" class="image"></td>
+                <td class="skillsimage"><img id="ml1" src="SmartHeart.jpg" class="image"></td>
                 <td class="skills">Noumenon Energy Core(Passive Skill)</td>
-                <td class="skillsimage"><img id="ml" src="NoumenonEnergyCore.jpg" class="image"></td>
+                <td class="skillsimage"><img id="ml1" src="NoumenonEnergyCore.jpg" class="image"></td>
             </tr>
             <tr>
                 <td class="skills">Moonlight Immersion</td>
-                <td class="skillsimage"><img id="ml" src="MoonlightImmersion.jpg"></td>
+                <td class="skillsimage"><img id="ml1" src="MoonlightImmersion.jpg"></td>
                 <td class="skills">Love Waves</td>
-                <td class="skillsimage"><img id="ml" src="LoveWaves.jpg"></td>
+                <td class="skillsimage"><img id="ml1" src="LoveWaves.jpg"></td>
                 <td class="skills">Charge!</td>
-                <td class="skillsimage"><img id="ml" src="Charge.jpg"></td>
+                <td class="skillsimage"><img id="ml1" src="Charge.jpg"></td>
             </tr>
             <tr>
                 <td class="skills">Domain Of Moon Goddess</td>
-                <td class="skillsimage"><img id="ml" src="DomainofMoonGoddess.jpg"></td>
+                <td class="skillsimage"><img id="ml1" src="DomainofMoonGoddess.jpg"></td>
                 <td class="skills">Puppet-on-a-String</td>
-                <td class="skillsimage"><img id="ml" src="PuppetonaString.jpg"></td>
+                <td class="skillsimage"><img id="ml1" src="PuppetonaString.jpg"></td>
                 <td class="skills">Guardian's Bulwark</td>
-                <td class="skillsimage"><img id="ml" src="GuardiansBulwark.jpg"></td>
+                <td class="skillsimage"><img id="ml1" src="GuardiansBulwark.jpg"></td>
             </tr>
             <tr>
                 <td class="skills">Blessing Of Moon Goddess</td>
-                <td class="skillsimage"><img id="ml" src="BlessingofMoonGoddess2.png"></td>
+                <td class="skillsimage"><img id="ml1" src="BlessingofMoonGoddess.png"></td>
                 <td class="skills">Heartguard</td>
-                <td class="skillsimage"><img id="ml" src="Heartguard.jpg"></td>
+                <td class="skillsimage"><img id="ml1" src="Heartguard.jpg"></td>
                 <td class="skills">Noumenon Blast</td>
-                <td class="skillsimage"><img id="ml" src="NoumenonBlast.jpg"></td>
+                <td class="skillsimage"><img id="ml1" src="NoumenonBlast.jpg"></td>
             </tr>
         </table>
       </div>
