added text overlay temp

--- a/index1.html
+++ b/index1.html
@@ -17,35 +17,46 @@
         </style>
     </head>
     <body>
-      <div class="jumbotron mlbanner">
-          <h1><span class="badge badge-secondary">Mobile Legends! My Top 3 Support Characters!</span></h1>
+      <div style="background-image: url('MLbanner.jpg');" class="mlbanner">
+        <p class="fontprop">Mobile Legends! My Top 3 Support Characters!</p>
       </div>
         <p>Skill's and Ultimate</p>
         <div id="container">
         <table id="MLtable">
             <tr>
                 <th>Estes</th>
-                <th>------</th>
+                <th>-----</th>
                 <th>Angela</th>
-                <th>------</th>
+                <th>-----</th>
                 <th>Lolita</th>
-                <th>------</th>
+                <th>-----</th>
             </tr>
             <tr>
                 <td class="skills">Scripture Of The Moon Elf(Passive Skill)</td>
-                <div id="container2">
-                  <td><img id="ml1" src="ScriptureoftheMoonElf.jpg" class="image"></td>
-                  <div class="overlay">Code of Moon Elves will charge energy into Estes slowly. When it
+                <td class="skillsimage">
+                <div class="container2">
+                  <img src="ScriptureoftheMoonElf.jpg" class="image">
+                  <div class="overlay">
+                    Code of Moon Elves will charge energy into Estes slowly. When it
                     stack up to 100, it will improve his next Basic Attack, dealing 250 (+100%Total Physical Attack)
                     (+150%Total Magic Power) points of Magic Damage to the target while slowing it down. The damage
                     will ricochet, dealing 125 (+50%Total Physical Attack)(+75%Total Magic Power) points of Magic
                     Damage to nearby enemies and slowing them by 60%. Lasts 1.5s.
                   </div>
                 </div>
+              </td>
                 <td class="skills">Smart Heart (Passive Skill)</td>
-                <td class="skillsimage"><img id="ml1" src="SmartHeart.jpg" class="image"></td>
+                <td class="skillsimage">
+                <div class="container2">
+                  <img id="ml1" src="SmartHeart.jpg" class="image">
+                  <div class="overlay">
+                    Each time Angela uses a skill, her movement speed increases by 10% for 4s, up to 30%.
+                    This acceleration effect will also be applied to her attached ally.
+                  </div>
+                </div>
+              </td>
                 <td class="skills">Noumenon Energy Core(Passive Skill)</td>
-                <td class="skillsimage"><img id="ml1" src="NoumenonEnergyCore.jpg" class="image"></td>
+                <td class="skillsimage"><img id="ml1" src="NoumenonEnergyCore.jpg"></td>
             </tr>
             <tr>
                 <td class="skills">Moonlight Immersion</td>
@@ -78,7 +89,7 @@
     <table class="imagesbuttons">
         <tbody>
           <tr>
-            <td><img id="ml" src="estes1.jpg" height="700" width="350"></td>
+            <td><img id="ml" src="estes1.jpg" height="500" width="350"></td>
             <td><img id="ml" src="angela1.jpg" height="500" width="350"></td>
             <td><img id="ml" src="lolita1.jpg" height="500" width="350"></td>
     </div>
