updated banner with text

--- a/index1.html
+++ b/index1.html
@@ -17,9 +17,12 @@
         </style>
     </head>
     <body>
-      <div style="background-image: url('MLbanner.jpg');" class="mlbanner">
+      <div class="mlbanner">
+        <img src="MLbanner.jpg" alt="MLBANNER" style="width:100%">
+      <div class="mlbannercontent">
         <p class="fontprop">Mobile Legends! My Top 3 Support Characters!</p>
       </div>
+    </div>
         <p>Skill's and Ultimate</p>
         <div id="container">
         <table id="MLtable">
