added heroes and artworks html

--- a/index1.html
+++ b/index1.html
@@ -23,6 +23,17 @@
         <p class="fontprop">Mobile Legends! My Top 3 Support Characters!</p>
       </div>
     </div>
+    <div class"navb">
+    <nav class="navbar navbar-dark bg-dark justify-content-between">
+      <a class="navbar-brand"><button onclick="window.open('index1.html')">Home</button></a>
+      <a class="navbar-brand"><button onclick="window.open('heroes.html')">Heroes</button></a>
+      <a class="navbar-brand"><button onclick="window.open('artworks.html')">Artworks</button></a>
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </nav>
+    </div>
         <p>Skill's and Ultimate</p>
         <div id="container">
         <table id="MLtable">
